@@ -4,11 +4,11 @@ COPY pom.xml pom.xml
 COPY src src
 RUN mvn package -q
 
-FROM openjdk:8-jdk-alpine
+FROM openjdk:11.0.3-jdk-slim
 WORKDIR /martian
 COPY --from=maven /martian/target/martian.jar martian.jar
 COPY --from=maven /martian/target/lib lib
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "martian.jar"]
+CMD ["java", "-jar", "--illegal-access=deny --add-opens java.base/java.lang=ALL-UNNAMED", "martian.jar"]
